[metadata]
name = idiosync
description = Synchronize user databases
author = Michael Brown
author_email = mbrown@fensystems.co.uk
url = https://github.com/unipartdigital/idiosync
license = GPLv2+
copyright = Copyright 2019 Michael Brown
classifiers = Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: System Administrators
    License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
    Programming Language :: Python :: 3
    Topic :: Security
    Topic :: System :: Systems Administration :: Authentication/Directory
